# apriltags-cpp-win

./: .gitignore  CMakeLists.txt  Findk4a.cmake  Findk4arecord.cmake  TODO.txt
images/: SN000549315312_corners.json  apriltag_test_corners.json  camera_corners.json
src/: CMakeLists.txt  CameraUtil.cpp  azure_apriltags.cpp  azure_kinect_helpers.cpp  azure_kinect_helpers.h  camera_apriltags.cpp  camtest.cpp  transformation_helpers.cpp  transformation_helpers.h
